--- a/helm-webapp/values-dev.yaml
+++ b/helm-webapp/values-dev.yaml
@@ -1,5 +1,6 @@
+
 replicas: 5
 
 configmap:
   data:
-    CUSTOM_HEADER: "This is on the DEV environment! PEAR"
+    CUSTOM_HEADER: 'This is on the DEV environment!'
