--- a/helm-webapp/values-prod.yaml
+++ b/helm-webapp/values-prod.yaml
@@ -1,5 +1,6 @@
+
 replicas: 4
 
 configmap:
   data:
-    CUSTOM_HEADER: "This is on the PROD environment! ORANGE"
+    CUSTOM_HEADER: 'This is on the PROD environment!'
