--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -17,3 +17,11 @@ jobs:
         uses: actions/checkout@v4
       - name: Step two
         run: echo Hi
+  job3:
+    name: Third job
+    runs-on: ubuntu-22.04
+    needs: [ job1, job2 ]
+    steps:
+      - name: Step one
+        run: echo Hi
+        
